alignment correction in modal and add rtl in css components

--- a/projects/discussion-ui/assets/styles/theme.scss
+++ b/projects/discussion-ui/assets/styles/theme.scss
@@ -72,7 +72,6 @@ html[layout='joy'] {
   .discussion-start-modal .discussion-start-modal-content {
     .discussion-start-form .start-form-field .start-form-field-control {
       border-radius: var(--sbt-bradius-md) !important;
-      padding-left: 1rem;
     }
   }
 
